--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
-.App {
-  text-align: center;
+* {
+  --body-background-color: black;
+  --font-primary-color: white;
+  --font-secondary-color: rgb(113, 118, 123);
+  --border-color: grey;
+  --btn-background-color: rgb(29, 155, 240);
+  --who-to-follow-background-color: rgb(22, 24, 28);
+  --like-color: red;
+  --bookmark-color: blue;
+}
+
+.main {
+  width: 40%;
+}
+
+body {
+  background-color: var(--body-background-color);
+  width: 100%;
+}
+
+@media screen and (max-width: 1100px) {
+  .main {
+    width: 80%;
+  }
 }
