style : made responsive

--- a/src/components/MainContent/mainContent.css
+++ b/src/components/MainContent/mainContent.css
@@ -1,7 +1,8 @@
 .main_content_container {
   display: flex;
   flex-direction: column;
-  border-right: 1px solid rgb(47, 51, 54);
+  border-left: solid 0.2px var(--border-color);
+  border-right: solid 0.2px var(--border-color);
 }
 
 .posts {
@@ -31,6 +32,7 @@
   display: flex;
   padding-top: 1rem;
   width: 100%;
+  flex-wrap: wrap;
 }
 
 .post_input textarea:focus {
@@ -89,12 +91,7 @@
 }
 
 .comment_container:hover {
-  background-color: #090909;
-}
-
-.avatar_name {
-  display: flex;
-  column-gap: 0.3rem;
+  background-color: var(--hover-color);
 }
 
 .icon_container {
@@ -123,13 +120,15 @@
   display: flex;
   margin-left: 4rem;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .option_icons {
-  color: rgb(29, 155, 240);
+  color: var(--btn-background-color);
   display: flex;
   column-gap: 1rem;
   font-size: 1.3rem;
+  flex-wrap: wrap;
 }
 
 .post_option {
@@ -146,10 +145,28 @@
 }
 
 .blue_icon:hover {
-  color: rgb(29, 155, 240);
+  color: var(--btn-background-color);
   border-radius: 50%;
 }
 
 .pink_icon:hover {
   color: rgb(249, 24, 128);
+}
+
+.green_icon:hover {
+  color: rgb(80, 200, 120);
+}
+
+@media screen and (max-width: 500px) {
+  .time_icon,
+  .poll_icon {
+    display: none;
+  }
+  .post_button {
+    margin-top: 0.8rem;
+  }
+  .post_input textarea {
+    width: 50%;
+    font-size: 0.9rem;
+  }
 }
