--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   --border-color: rgb(47, 51, 54);
   --btn-background-color: rgb(29, 155, 240);
   --who-to-follow-background-color: rgb(22, 24, 28);
+  --hover-color: #090909;
 }
 
 .App {
