--- a/src/components/rightNav/rightNav.css
+++ b/src/components/rightNav/rightNav.css
@@ -133,6 +133,13 @@ footer {
   column-gap: 1rem;
 }
 
+.search_icon {
+  color: var(--font-secondary-color);
+  margin-top: 1.2rem;
+  padding-left: 1rem;
+  position: absolute;
+}
+
 @media screen and (max-width: 1150px) {
   .right_nav_container {
     display: none;
